--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
-FROM openjdk:17
-WORKDIR /app
-COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+FROM openjdk:8
+EXPOSE 8080
+ADD target/devops-integration.jar devops-integration.jar
+ENTRYPOINT [ "java","-jar","/devops-integration.jar" ]
